<resources>
    <string name="app_name">Reliv</string>
    <string name="degree_sign">&#176;</string>
    <string name="splash_title">Reliv</string>
    <string name="splash_sub_title">Live Life Healthy</string>
    <string name="mobile">Mobile</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="entered_mobile_number_length_should_be_10">Entered mobile number length should be 10</string>
    <string name="get_started">Get Started</string>
    <string name="live_life">Live Life</string>
    <string name="healthy">Healthy</string>
    <string name="life_isn_t_about">Life isn\'t about</string>
    <string name="finding_yourself">Finding yourself,</string>
    <string name="life_is_about_creating_yourself">Life is about creating\nYourself</string>
    <string name="your_can_create">You can create</string>
    <string name="your_life">your life,</string>
    <string name="however_you_wish_it_to_be">However you wish\nit to be</string>
    <string name="there_is_nothing">There is nothing</string>
    <string name="either_good_or_bad">either good or bad,</string>
    <string name="but_thinking_makes_it_so">but thinking makes it so</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_username">Enter Username</string>
    <string name="username">Username</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="country_code">+91</string>
    <string name="enter_4_digit_code">Enter 4 digit Code</string>
    <string name="resend">Resend</string>
    <string name="hello">Hello</string>
    <string name="what_s_your_name">What\'s your Name?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="upload_your_photo">Upload Your Photo</string>
    <string name="take_selfie_upload">Take Selfie/Upload</string>
    <string name="next">Next</string>
    <string name="choose_your_gender">Choose Your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_height">Your Height</string>
    <string name="_2_0_m">2.0 m</string>
    <string name="_1_9_m">1.9 m</string>
    <string name="_1_8_m">1.8 m</string>
    <string name="_1_7_m">1.7 m</string>
    <string name="_1_6_m">1.6 m</string>
    <string name="_1_5_m">1.5 m</string>
    <string name="_1_4_m">1.4 m</string>
    <string name="_1_3_m">1.3 m</string>
    <string name="_1_2_m">1.2 m</string>
    <string name="_1_1_m">1.1 m</string>
    <string name="_1_0_m">1.0 m</string>
    <string name="your_weight">Your Weight</string>
    <string name="_55_kg">55 Kg</string>
    <string name="kg">Kg</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="your_location">Your Location</string>
    <string name="change">Change</string>
    <string name="enter_address_details">Enter Address Details</string>
    <string name="house">House</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="select_image_action">Select Image Action</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="please_capture_your_photo">Please capture your photo</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="alert_message">Alert Message</string>
    <string name="please_select_your_date_of_birth">Please select your date of birth</string>
    <string name="please_enter_your_address">Please enter your address</string>
    <string name="please_enter_your_house_no">Please enter your house number</string>
    <string name="please_enter_street">Please enter street</string>
    <string name="please_enter_city">Please enter city</string>
    <string name="please_enter_state">Please enter state</string>
    <string name="please_enter_zip_code">Please enter zip code</string>
    <string name="logo">Logo</string>
    <string name="notification_channel_id">channel_1</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message</string>
    <string name="go_to_chat">GO TO Chat</string>
    <string name="server_error">Server Error</string>
    <string name="Something_went_wrong">Something went wrong, please try again later.</string>
    <string name="something_went_wrong">Something went wrong...!!!</string>
    <string name="video_call">Video Call</string>
    <string name="voice_call">Voice Call</string>
    <string name="what_service_you_need">What Service You Need?</string>
    <string name="doctor_slot_not_booked_yet">Doctor slot not booked yet</string>
    <string name="success">Success</string>
    <string name="payment_success">"Payment successfully completed. "</string>
    <string name="failure">Failure</string>
    <string name="payment_failure">Payment failure, please try again.</string>
    <string name="packages">Packages</string>
    <string name="welcome_to_reliv">Welcome to RELIV</string>
    <string name="chat_now">Chat Now</string>
    <string name="timer_zero">00:00</string>

    <string-array name="month_list">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="day_list">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
</resources>