<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_15sdp"
    app:cardUseCompatPadding="true"
    tools:viewBindingIgnore="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_bold"
            android:gravity="center"
            android:text="@string/alert"
            android:textColor="@color/gray_dark_color"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:fontFamily="@font/helvetica"
            android:gravity="center"
            android:text="@string/alert_message"
            android:textColor="@color/gray_color"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_positive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_positive"
                    style="@style/Widget.Blue.ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:minWidth="@dimen/_100sdp"
                    android:minHeight="@dimen/_40sdp"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_negative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_negative"
                    style="@style/Widget.Blue.ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:minWidth="@dimen/_100sdp"
                    android:minHeight="@dimen/_40sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>