<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    tools:context=".view.fragments.UserDetailsFragment">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:src="@drawable/ic_back_black"
            tools:ignore="ContentDescription,RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:text="@string/hello"
            android:textColor="@color/gray_dark_color"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:text="@string/what_s_your_name"
            android:textColor="@color/gray_dark_color"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:textColor="@color/gray_dark_color"
            android:textColorHint="@color/gray_light_color"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/last_name"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:textColor="@color/gray_dark_color"
            android:textColorHint="@color/gray_light_color"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/Widget.Blue.ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/next"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_main"
        app:shapeAppearance="@style/RoundedCornerButton5dp" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_next">

        <View
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_3sdp"
            android:background="@color/light_blue" />

        <View
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/gray_light_color" />

        <View
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_3sdp"
            android:background="@color/gray_light_color" />

        <View
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/gray_light_color" />

        <View
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_3sdp"
            android:background="@color/gray_light_color" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>